// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test on <GifExpertApp /> should show <GifExpertApp /> correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Test on <GifExpertApp /> should show a list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Pikachu"
      key="Pikachu"
    />
    <GifGrid
      category="Eevee"
      key="Eevee"
    />
  </ol>
</Fragment>
`;
